# localhost

./: Cargo.toml  README.md  config.toml
pages/: hello.html
server/: config.toml  hello.html  index.html  post.html  script.py
src/: args.rs  config.rs  connection.rs  files.rs  ip.rs  main.rs  options.rs  utils.rs
src/config/: parser.rs
src/connection/: connection.rs  content.rs  mod.rs  multipart.rs  requests.rs  utils.rs
src/hosts/: mod.rs  parse.rs  write.rs
src/interface/: cgi.rs  mod.rs
